Complete about section & fix navbar overlap issue

--- a/ca-app/src/static/css/components/about.scss
+++ b/ca-app/src/static/css/components/about.scss
@@ -1,14 +1,23 @@
 @import "../partials.scss";
 
 .about {
-  padding: 8rem 0!important;
+  margin: 6rem auto 3rem auto!important;
+  padding: 0!important;
   text-align: center;
   color: darken($primary-color, 10%);
 
   h3 {
     margin-bottom: 3.5rem;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: normal;
+
+    @media screen and (min-width: 768px) {
+      font-size: 2.4rem;
+    }
+    
+    @media screen and (min-width: 992px) {
+      font-size: 3rem;
+    }
 
     &::after {
       content: '';
@@ -16,14 +25,47 @@
       width: 80px;
       height: 2px;
       margin: 1rem auto;
-      background-color: $tertiary-color;
+      background-color: $candy-apple-red;
     }
   }
 
-  .col-md-3 {
+  .about-item {
+    flex: 0 0 100%;
+    margin-bottom: 2rem;
     padding: 3rem;
     border: 1px solid rgba(0, 0, 0, 0.05);
     border-radius: 3rem 3rem 3rem 0;
+    transition: box-shadow 0.5s ease;
+    
+    @media screen and (min-width: 768px) {
+      flex: 0 0 30%;
+      padding: 3rem 0.5rem;
+    }
+
+    @media screen and (min-width: 992px) {
+      flex: 0 0 32%;
+      padding: 3rem;
+    }
+
+    &:hover {
+      box-shadow: 1px 1px 30px 3px rgba(0, 0, 0, 0.05);
+    }
+
+    [class^="ti-"] {
+      font-size: 2.2rem;
+      color: $candy-apple-red;
+    }
+
+    h4 {
+      margin: 1.5rem 0 1rem 0;
+      font-size: 1.4rem;
+      font-weight: normal;
+    }
+
+    p {
+      line-height: 1.5;
+      color: rgba(0,0,0,0.7);
+    }
   }
 
 }
