--- a/ca-app/src/static/css/components/banner.scss
+++ b/ca-app/src/static/css/components/banner.scss
@@ -59,7 +59,6 @@
       position: relative;
       margin-top: 3.5rem;
       padding-left: 2rem;
-      z-index: 2;
 
       @media screen and (max-width: 575px) {
         flex-direction: column;
@@ -89,7 +88,7 @@
         }
 
         &:focus {
-          box-shadow: 1px 1px 3px 3px $secondary-color, -1px -1px 3px 3px $secondary-color;
+          box-shadow: 1px 1px 3px 3px $royal-purple, -1px -1px 3px 3px $royal-purple;
         }
       }
 
@@ -101,12 +100,12 @@
         font-size: 0.95rem;
         border: none; 
         border-radius: 1.5rem 1.5rem 1.5rem 0;
-        background: $tertiary-color;
+        background: $candy-apple-red;
         color: #fff;
         transition: background 0s ease;
         
         &:hover {
-          background: $secondary-color;
+          background: $royal-purple;
           transition: background 0.5s ease;
         }
       }
@@ -118,7 +117,6 @@
     bottom: -8%;
     right: 0;
     width: 88%;
-    z-index: 3;
 
     @media screen and (min-width: 480px) {
       right: 0%;
