--- a/ca-app/src/static/css/partials.scss
+++ b/ca-app/src/static/css/partials.scss
@@ -1,3 +1,4 @@
 $primary-color: #884bdf;
-$secondary-color: #6455e8;
-$tertiary-color: #ef3a86;
+$secondary-color: #5b32b4;
+$royal-purple: #6455e8;
+$candy-apple-red: #ef3a86;
